fix global-spacing-semi

--- a/assets/sass/abstracts/_variables.default.sass
+++ b/assets/sass/abstracts/_variables.default.sass
@@ -7,7 +7,7 @@ $offset: $header-height + 15px !default
 
 $global-spacing: 2.8rem !default
 $global-spacing-double: 5.6rem !default
-$global-spacing-semi: 1.4 !default
+$global-spacing-semi: 1.4rem !default
 $gutter-mobile: 1.875rem !default
 
 $footer-background-color: #F8F9FA !default
